[BUGFIX] Fix spacing

--- a/Resources/Private/Scss/_Includes/_csc.scss
+++ b/Resources/Private/Scss/_Includes/_csc.scss
@@ -248,6 +248,8 @@ DIV.csc-textpic DIV.csc-textpic-imagerow-last {
 }
 
 .csc-default {
+	margin-bottom: 1em;
+
 	p,
 	ol,
 	ul {
