--- a/Resources/Private/Scss/adw.scss
+++ b/Resources/Private/Scss/adw.scss
@@ -39,7 +39,7 @@ body {
 .main {
 	@extend .container;
 	min-height: 100%;
-	max-width: 970px;
+	max-width: 1000px;
 }
 
 .header {
